@@ -2,21 +2,26 @@ package nbc.chillguys.nebulazone.domain.common.validator.image;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
 import org.apache.tika.Tika;
+import org.springframework.http.MediaType;
 import org.springframework.web.multipart.MultipartFile;
 
 import jakarta.validation.ConstraintValidator;
 import jakarta.validation.ConstraintValidatorContext;
 
 public class ImageFileValidator implements ConstraintValidator<ImageFile, Object> {
-
 	private static final Tika tika = new Tika();
-	private static final List<String> VALID_TYPE_LIST
-		= Arrays.asList("image/jpeg", "image/pjpeg", "image/png", "image/gif", "image/bmp", "image/x-windows-bmp");
+	private static final List<String> VALID_TYPE_LIST = List.of(
+		MediaType.IMAGE_JPEG_VALUE,
+		"image/pjpeg",
+		MediaType.IMAGE_PNG_VALUE,
+		MediaType.IMAGE_GIF_VALUE,
+		"image/bmp",
+		"image/x-windows-bmp"
+	);
 
 	@Override
 	public boolean isValid(Object value, ConstraintValidatorContext context) {
@@ -24,25 +29,28 @@ public class ImageFileValidator implements ConstraintValidator<ImageFile, Object
 			return true;
 		}
 
-		if (value instanceof MultipartFile) {
-			return isImage((MultipartFile)value);
+		if (value instanceof MultipartFile file) {
+			return isImage(file);
 		}
 
 		if (value instanceof List<?> list) {
+			if (list.isEmpty()) {
+				return false;
+			}
+
 			for (Object element : list) {
-				if (element instanceof MultipartFile) {
-					if (!isImage((MultipartFile)element)) {
-						return false;
-					}
+				if (!(element instanceof MultipartFile file) || !isImage(file)) {
+					return false;
 				}
 			}
+
+			return true;
 		}
 
-		return true;
+		return false;
 	}
 
 	private boolean isImage(MultipartFile file) {
-
 		try (InputStream inputStream = file.getInputStream()) {
 			String mimeType = tika.detect(inputStream);
 
